# dq_mcp_server

dq_mcp_server/: LICENSE  README.md  pyproject.toml  requirements.txt
dq_mcp_server/examples/: mcp-config.json
dq_mcp_server/scripts/: run_server.py  test_server.py
dq_mcp_server/src/mcp_server_dq/: __init__.py  server.py
dq_mcp_server/tests/: test_server.py
